--- a/wlht/package.json
+++ b/wlht/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.9.1",
     "vue": "^2.5.2",
+    "vue-calendar-component": "^2.8.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
